[S20-115] [minor] fix settings page with horizontal scrollbar

--- a/frontend/src/sass/layout/_logged-nav.scss
+++ b/frontend/src/sass/layout/_logged-nav.scss
@@ -27,9 +27,9 @@
     position: relative;
     flex-grow: 1;
 
-    & :focus{
-      border: 1px solid rgba(gray, 1);
-      transition: all .2s;
+    input:focus {
+      border: 1px solid gray;
+      transition: border .2s;
     }
   }
 
